fix : style mixin, attribute`s border & textoverflow 수정
- border : 사용되던 $type의 가용성을 높이기 위해 포커싱을 "한 부분 → 특정 라인의 양쪽" 으로 변경
- textoverflow : textoverFlow가 적용되는 곳의 너비가 유동적으로 변경될 수 있도록 수정

--- a/src/views/components/album/add/hand/SearchKeyword.scss
+++ b/src/views/components/album/add/hand/SearchKeyword.scss
@@ -83,7 +83,7 @@
               @include setFlex(column, center);
               width: 90%;
               > article {
-                @include setTextOverflow;
+                @include setTextOverflow();
               }
               [class$="name"] {
                 color: black;
